Refactor controllers